# battlerobot-qt

./: .gitignore  BattleRobot.pro  BattleRobot_ru_RU.qm  BattleRobot_ru_RU.ts  CMakeLists.txt  ConnectWindow.qml  ControlWindow.qml  LICENSE  Line.qml  LoadingCircleIndicator.qml  MoveButton.qml  MyIconButton.qml  MyIconLabel.qml  MyIconRadioButtonLabel.qml  QuitDialog.qml  SettingsWindow.qml  TestBt.pro  TestBt_ru_RU.ts  logic.cpp  logic.h  main.cpp  main.qml  pack_appx.bat  pack_appx_armv7.bat  pack_appx_x86.bat  qml.qrc  readme.md
android/: AndroidManifest.xml  build.gradle
android/res/values/: themes.xml
android/src/ru/romankartashev/battlerobot/: MyActivity.java
images/: gaz_icon.png~
ios/: Info.plist  LaunchScreen.storyboard
qml/: ConnectWindow.qml  ControlWindow.qml  Line.qml  LoadingCircleIndicator.qml  MoveButton.qml  MyIconButton.qml  MyIconLabel.qml  MyIconRadioButtonLabel.qml  QuitDialog.qml  SettingsWindow.qml  main.qml
src/: enums.cpp  enums.h  logic.cpp  logic.h  main.cpp
uwp_assets/: AppxManifest.xml
